# sdl2-chess-engine

./: .gitignore  CMakeLists.txt  Credits.txt  README.md  main  main.cpp
Core(GameManagement)/Game/: Game.h
Engine/Board/: Board.cpp  Board.h
Engine/MoveGenerator/: MoveGenerator.cpp  MoveGenerator.h  MoveGeneratorTests.cpp
Engine/PositionEvaluation/: EvaluationFunctions.h
Enums/: GameResults.h  GameStatus.h  MoveFlag.h  PieceType.h  PieceTypes.h  PlayerColors.h
Functions/: BitManipulation.h  FENFunctions.h  PositionConvertingFunctions.h  StringFunctions.cpp
GUI/BoardPosition/: BoardPosition.h
GUI/BoardRendering/: BoardRenderer.h
GUI/BoardRendering/Renderer2D/: Renderer2D.cpp  Renderer2D.h
GUI/Enums/: Enums.h  PieceTypes.h  PlayerColors.h
GUI/Functions/PositionConverting/: FENFunctions.h  PositionConvertingFunctions.h
GUI/GUITypes/ChessGUIInterface/: ChessGUI.h
GUI/GUITypes/ConsoleGUI/: ConsoleGUI.h
GUI/Game/: Game.cpp  Game.h
GUI/GameInstances/BoardPosition/: BoardPosition.h
GUI/InputHandler/: InputHandler.h
GUI/InputStorage/: InputStorage.cpp  InputStorage.h
GUI/Move/: Move.h
GUI/MoveInputReceiver/: InputReceiver_2D.h  InputReceiver_3D.h  MoveInputReceiver.h
GUI/PositionConverting/: FENFunctions.h  PositionConvertingFunctions.h
GUI/WindowManager/: WindowManager.cpp  WindowManager.h
Math/: Complex.h  Material.h  Matrix.h  Model.h  ModelLoader.h  Polygon.h  Quaternion.h  StringFunctions.cpp  Vector.h  Vertex.h
Structs/: BoardArray.h  CastlingRights.h  Move.h
Tests/Engine/: CMakeLists.txt  MoveGeneratorTests.cpp
(+13 files in other folders)
